Horizontal Body Overflow Fix
- Fixed horizontal scrollbar appearing on chrome

--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -152,7 +152,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-	overflow-x: hidden;
+	overflow-x: hidden !important;
   max-width: 100vw;
 	background-color: var(--background);
 	color: var(--background-text);
